--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,6 @@
     
         <a href="https://www.typescriptlang.org/" target="_blank">TypeScript Docs</a>
       </footer>
-    <script src="sandbox.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
